--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Foody</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="overview_fragment">Overview fragment</string>
+    <string name="ingredient_fragment">Ingredient fragment</string>
+    <string name="comment_fragment">Comment fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_recipe_detail">RecipeDetail</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
